--- a/LibroMind-BE.Services/LibroMind-BE.Services.csproj
+++ b/LibroMind-BE.Services/LibroMind-BE.Services.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\LibroMind-BE.DAL\LibroMind-BE.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
 </Project>
