--- a/LibroMind-BE.API/appsettings.json
+++ b/LibroMind-BE.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DAVID-LAPTOP;Database=LibroMind;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=MARIA;Database=LibroMind;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
